# Voxele

./: agent-plan.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: world.rs
src-tauri/src/generation/: biomes.rs  mod.rs  noise.rs
src-tauri/src/world/: block.rs  chunk.rs  coordinates.rs  mod.rs
src/game/: BlockRaycaster.ts  ChunkMeshBuilder.ts  ChunkMeshManager.ts  GameEngine.ts  PlayerController.ts  types.ts
src/ipc/: gameClient.ts
src/ui/: GameHUD.tsx
