[package]
name = "voxele-app"
version = "0.1.0"
description = "Voxele - A Minecraft-like voxel game built with Tauri CEF"
authors = ["you"]
edition = "2021"

[lib]
name = "voxele_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", default-features = false, features = [
  "cef", "compression", "devtools", "dynamic-acl"
] }
# tauri-plugin-opener disabled for now - not needed for game MVP
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
cef = ["tauri/cef"]
default = ["cef"]

